# PythonDemos

./: README.md
arguments/: basic_argv.py  parser.py
dunder/abc/: ghost.py
dunder/collection/: bucket.py  polygon.py
dunder/context manager/: sqlite_connector.py
dunder/operators/: validator.py
excel/: 1.xlsx  load_xlsx.py
file/: country-xml.py  csv-dialects.py  excel-export.csv
packaging/package example/: import_demo.py  point_cloud_demo.py
packaging/package example/example/: README.md  pyproject.toml  setup.cfg
packaging/package example/example/src/lidar/: __init__.py  __main__.py  point.py
packaging/package example/example/src/lidar/everything/: __init__.py  demo.py
packaging/package example/example/src/lidar/math/: __init__.py  vector.py
packaging/simple/: encrypt-test.py  main.py  myui.py
packaging/simple/mymath/: __init__.py  fake_crypto.py  fake_random.py
testing/: main_code.py  test_main.py
