[metadata]
name = lidar
version = 0.0.1
author = Durucz Béla
author_email = ping@thedeveloperguy.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/the-developer-guy/PythonDemos
project_urls =
    Bug Tracker = https://github.com/the-developer-guy/PythonDemos/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hello = lidar.point:module_demo
